--- a/Surveys/S20241115.md
+++ b/Surveys/S20241115.md
@@ -1175,150 +1175,175 @@ GroupFormer 的引入有效地提高了模型处理组内序列的能力, 减轻
 - **处理用户说话中的停顿.** 当用户简短地暂停, 系统可以将其解释为思考的时刻, 而不是响应的时刻, 避免过早的打断, 保持自然的对话流畅.
 - **在必要时中断用户.** 在系统检测到关键信息时, 它可以选择中断用户, 提供即时反馈. 例如, 如果用户正在说话, 但系统需要提醒他们出现错误, 它可以立即介入, 确保有效的沟通.
 
-##### 级联系统
+##### 级联式系统
 
 为了实现交互功能, 级联口语对话模型通常要求显式建模对话轮次.
 作为核心, 大语音模型需要有效的内容和轮次管理.
 接下来, 我们介绍级联系统中的几个代表性工作.
 
-- **Duplex Conversation.** In [^143], three core modules are proposed to achieve smooth full-duplex dialogue: user state detection, response signal selection, and interruption detection.
-The user state detection module not only focuses on traditional turn-end detection but also identifies whether the user intends to switch turns, continue speaking, or hesitates during their speech.
-To achieve this, the system uses a multimodal model, taking audio and text as inputs, and incorporates features such as speech rhythm, pitch, and pauses for more accurate assessment of the user’s state, determining whether to respond immediately or wait longer.
-The response signal selection module inserts small backchannel cues (such as "uh-huh" or "right") at appropriate times to simulate natural human conversation.
-By analyzing a large volume of real dialogues, this module extracts and trains suitable response signals for various conversation scenarios.
-Using multi-label classification, the system selects the optimal response for each dialogue context, significantly reducing user waiting time and enhancing conversation flow.
-The interruption detection module flexibly responds to user interruptions.
-Unlike traditional rule-based detection methods, this system builds an end-to-end detection model with multimodal input (audio and text) that not only identifies genuine user interruptions but also avoids misinterpreting background noise or unintended voice signals as interruptions.
+###### 双工对话
 
-- **Outbound Agent System.** [^144] proposed a full-duplex dialogue scheme for outbound systems, focusing on the issues of conversational fluidity and timing of interaction in speech dialogue.
-This scheme uses semantic analysis to determine whether the user truly intends to interrupt the system and can handle disjointed expressions when users mention named entities.
-The core of this system is a full-duplex interaction finite-state machine (FSM), which retrieves text snippets from ASR results every 300 milliseconds to decide whether to interrupt.
-Through continuous semantic analysis of user speech, the interruption model identifies meaningful user interruptions and avoids frequent interruptions caused by brief, meaningless responses (like "uh-huh").
-The model employs a pre-trained BERT-based text classifier and utilizes streaming input, ensuring that the system can process and analyze user speech in real-time as it is received.
-Additionally, the system includes a Discontinuous Expression module to handle user pauses when mentioning named entities.
-Specifically, when users hesitate over entities (such as numbers, locations, or company names), VAD may erroneously detect turn-end.
+文献 [^Lin2022Duplex] 提出了三个核心模块以实现平滑的全双工对话: 用户状态检测, 响应信号选择, 终端检测.
+- 用户状态检测模块: 不仅关注传统的轮次结束检测, 还可以识别用户是否打算切换轮次, 继续说话或是在说话时犹豫. 为了实现这一点, 系统使用多模态模型, 接收音频和文本作为输入, 并整合诸如语音节奏, 音高和停顿等特征以更精确地评估用户状态, 确定是否立即响应或等待更长时间.
+- 响应信号选择模块: 在合适的时机插入小的反向通道提示 (如 "嗯" 或 "对") 以模拟自然人类对话. 通过分析大量真实对话, 该模块提取并训练适合各种对话场景的响应信号. 使用多标签分类, 系统为每个对话上下文选择最优的响应, 显著减少用户等待时间并增强了对话流动.
+- 终端检测模块: 灵活响应用户中断. 和传统的基于规则的检测方法不同, 该系统构建了具有多模态输入 (音频和文本) 的端到端检测模型, 既可以识别真正的用户中断, 也避免误解背景噪声或意外语音信号为中断.
 
-The advent of Large Language Models  has significantly advanced generative AI development.
-Models like ChatGPT demonstrate strong capabilities in semantic understanding and logical reasoning, offering a simplified method to integrate various dialogue components into a unified framework, which may simplify SDS construction.
-GPT-4o represents a milestone for dialogue systems, showcasing a nearly human-like conversational voice model.
-Its flexible interaction style and interruption mechanisms make human-computer interaction more natural and fluid.
-However, as a commercial model, its training data and implementation details remain proprietary, making replication challenging.
+###### 外呼 (Outbound) 智能体系统
 
-- **Full-duplex LLM.** [^130] proposed a full-duplex spoken dialogue models based on LLMs, enabling simultaneous reception and transmission of voice signals through a perception module, an action module, and a neural finite-state machine (FSM).
-The perception module uses a streaming ASR model, capturing and processing user speech in real-time with 640-millisecond intervals per time step, converting it into token inputs for the LLM.
-The action module, utilizing a streaming TTS model, instantly converts the LLM-generated text into audio output and can pause or resume playback as needed, ensuring the system can generate audio while receiving user input.
-At the core is the neural FSM, allowing the LLM to switch between "speaking" and "listening" states.
-Controlled by FSM signals, the system can dynamically decide to continue speaking, listen, or interrupt based on the dialogue context.
-Experimental results show that Wang et al.'s full-duplex streaming system reduces response latency by threefold, achieves a response time within 500 milliseconds in over 50\
-- **VITA.** VITA is an open-source multimodal large language model which aimed at enhancing multimodal interaction experiences.
-VITA can process multiple modalities, such as video, image, text, and audio, and achieves fluid human-computer interaction through a new duplex architecture involving two simultaneously operating models: one for generating responses to user queries, and another for continuously monitoring environmental inputs.
-When a new user query is detected, the generation model pauses, and the monitoring model processes the new query and generates an updated response.
-This setup enables VITA to support audio interruption, allowing users to ask new questions during system generation, with the system immediately pausing the current response to handle new input.
-VITA’s perception abilities are achieved through multimodal alignment and instruction fine-tuning, enabling it to switch automatically between different inputs.
-Additionally, VITA employs state tokens to distinguish user input types, such as query audio, background noise, and text input, facilitating wake-free interaction.
-VITA's enhanced listening module prevents unnecessary user feedback from interrupting system responses, improving robustness.
+文献 [^Jin2021Duplex] 提出了用于外呼系统的全双工对话方案, 着重于语音对话中的对话流畅性和交互时机.
+该方案使用语义分析来确定用户是否真的打算中断系统, 并在用户提到命名实体是可以处理杂乱的表达.
+该系统的核心是全双工交互有限状态机, 每隔三百毫秒从 ASR 结果中检索文本片段以决定是否中断.
+通过对用户语音的连续语义分析, 中断模型可以识别有意义的用户中断并避免由简短无意义响应 (如 "嗯") 引起的频繁中断.
+该模型采用基于预训练 BERT 的文本分类器, 并使用流式输入, 确保系统可以实时接收和分析用户语音.
+此外, 该系统还包含了不连续表达模块, 用于处理当提到命名实体时的用户停顿.
+具体来说, 当用户在提到实体时犹豫 (如数字, 位置或公司名称), VAD 可能错误地检测到轮次结束.
 
-- **CleanS2S.**[^145]
-This model employs a structured pipeline to enable responsive and flexible interactions in a spoken dialogue setting.
-Designed to facilitate seamless turn-taking and interruption handling, the model consists of several interconnected modules working in a coordinated sequence to optimize user experience.
-Starting with user input, the system uses a Voice Activity Detection (VAD) module to continuously monitor for incoming audio signals.
-As soon as a user starts speaking, VAD captures the input and immediately initiates processing by sending the audio data to the Automatic Speech Recognition (ASR) module.
-This quick detection and response setup allows the system to react to user input without delay.
-Once ASR transcribes the audio into text, the transcription is passed to the Large Language Model (LLM), which generates a relevant response based on the user’s query.
-Meanwhile, the model is designed to be interruption-aware.
-During response generation, if VAD detects a new user input (indicating an interruption or a follow-up query), the system can promptly adjust its processing flow.
-In this case, the LLM temporarily pauses its current task, allowing ASR to transcribe the new input, which the LLM then uses to generate an updated response.
-This interruption capability is achieved through the model’s layered processing design, allowing for adaptive turn-taking that feels natural and responsive.
-The Text-to-Speech (TTS) module then converts the generated text response into audio, which is transmitted to the user via WebSocket.
-To further support interruption handling, TTS breaks down lengthy responses into smaller audio segments that are sent progressively.
-This segmentation allows the system to stop audio output instantly if an interruption occurs, switching to the new input without delay.
-Each segment is prepared and sent only after a brief VAD check, ensuring that the system is ready to pause and handle new input at any time.
-This interconnected processing chain—VAD detecting input, ASR transcribing, LLM generating responses, and TTS outputting segmented audio—creates a duplex interaction framework that balances response generation and user-driven interruptions.
-By seamlessly coordinating these components, the model provides a fluid, real-time dialogue experience that adapts to user interactions dynamically.
+---
 
-**End-to-End Systems.**
-In contrast, end-to-end spoken dialogue models do not require explicit modeling of dialogue turns; instead, they learn interaction modeling directly from training data.
-Next, we introduce several representative works on interaction in end-to-end systems.
+大语言模型的出现显著推动了生成式人工智能的发展.
+模型如 ChatGPT 展示了在语义理解和逻辑推理方面的强大能力, 提供了一种简化的方法将各种对话组件集成到统一框架中, 这可能简化 SDS 构建.
+GPT-4o 代表对话系统的里程碑, 展示了一种与人类十分相似的对话语音模型.
+其灵活的交互方式和中断机制使人机交互更加自然和流畅.
+然而, 作为商业模型, 其训练数据和实现细节仍然是专有, 使得复制具有挑战性.
 
-- **dGSLM.** In end-to-end systems, the introduction of the dGSLM model marks a significant milestone in full-duplex technology development.
-Within the dGSLM framework, duplex technology is effectively implemented.
-This model demonstrates how to capture complex interactions within dialogues directly from raw audio data through generative spoken dialogue modeling, without relying on text.
-The core innovation of dGSLM is the dual-tower Transformer architecture, called the Dialogue Transformer Language Model (DLM), which uses a cross-attention mechanism to enable the system to process two parallel audio channels simultaneously.
-Through this architecture, the model not only independently generates speech for each channel but also shares information between channels using cross-attention, effectively modeling silences and interaction events.
-It leverages the HuBERT encoder and HiFi-GAN decoder, combined with the dual-tower DLM, and is trained on 2,000 hours of dual-channel telephone conversation audio (Fisher dataset), where each speaker in a conversation is allocated an independent audio track.
-The dGSLM model transforms the audio on both channels into discrete tokens using HuBERT, and the DLM model autoregressively predicts the next audio token and its duration.
-Finally, the HiFi-GAN[^HiFi-GAN] decoder reconstructs the audio for both channels.
-This approach differs significantly from traditional text-dependent spoken dialogue models, with a particular emphasis on modeling turn-taking and backchanneling capabilities.
-This capability gives dGSLM a notable advantage in duplex voice interaction, better mimicking the natural dynamics of human conversation.
-Through its duplex model design, dGSLM represents an essential step forward in interactive capabilities and provides a foundation for further advancements.
+###### 全双工大语言模型
 
-- **Moshi.** As a novel full-duplex architecture, Moshi incorporates a rich array of design concepts.
-Unlike dGSLM, Moshi does not abandon the language model’s ability in text dialogue.
-Moshi’s architecture is based on the Helium language model and Mimi neural audio codec, both trained from scratch.
-Helium, as a large pre-trained text language model, provides strong reasoning capabilities, while Mimi handles audio signal encoding and decoding.
-To achieve real-time interaction, Moshi is designed as a multi-stream architecture, simultaneously processing "user" and "moshi" audio streams without explicitly modeling speaker turns.
-Moshi also introduces the "Inner Monologue" method within the "moshi" audio stream, a process that jointly models text and audio tokens during training and inference.
-This approach allows the model to fully utilize textual knowledge while maintaining speech-to-speech system characteristics, significantly enhancing generation quality.
-Mimi, a neural audio codec integrating semantic and acoustic information through residual vector quantization and knowledge distillation, captures high-quality user input audio and Moshi’s output voice efficiently.
-To jointly model Moshi and user audio streams alongside Moshi’s text tokens, Depth Transformer with streaming inference capabilities is employed.
-The Mimi encoder and decoder combine convolutional and Transformer layers, with causal convolutions, allowing for streaming operation.
-Moshi is pre-trained on unsupervised audio data to handle speech scenarios and then fine-tuned on the Fisher dataset to address overlapping speech and interruptions.
-Finally, the system is further optimized on a custom instruction-tuning dataset, ensuring robust performance across various interactive scenarios.
-Experimental results show that Moshi excels in speech modeling and spoken QA tasks, especially in latency, achieving a theoretical latency of 160 milliseconds and 200 milliseconds in practice, significantly lower than the typical 230 milliseconds in natural conversation, enhancing real-time interaction and conversation flow.
+文献 [^Wang2024Full] 提出了一个基于大语言模型的全双工口语对话模型, 通过感知模块, 动作模块和神经有限状态机 (FSM) 实现了同时接收和传输语音信号.
+- 感知模块: 使用流式 ASR 模型, 实时捕获和处理用户语音, 每隔 640 毫秒的时间步长转化为 LLM 的 Token 输入.
+- 动作模块: 使用流式 TTS 模型, 即时将 LLM 生成的文本转换为音频输出, 并根据需要暂停或恢复播放, 确保系统在生成音频时可以接收用户输入.
+- 神经有限状态机: 作为核心, 使得 LLM 可以在说话和听取状态之间切换. 由 FSM 信号控制, 系统可以根据对话内容动态地决定是否继续说话, 听取或中断.
+- 实验结果表明该全双工流式系统通过三方面减少响应延迟, 能在 50% 以上的对话中实现响应时间在 500 毫秒内, 并以 96.7% 的比率处理用户中断, 而中断准确率为 54.7%.
 
-- **Parrot.** Parrot[^146] model incorporates multiple features specifically designed to enhance interaction in spoken dialogue.
-It uses a dual-channel audio setup, where each channel represents a different speaker.
-This configuration allows Parrot to manage both sides of a conversation independently, facilitating real-time turn-taking.
-By distinguishing between the user’s input and the system’s response on separate channels, the model can listen and respond in parallel, creating a more natural conversational flow.
-To handle simultaneous speaker inputs effectively, Parrot employs a "next-token-pair prediction" mechanism, allowing it to predict tokens for both channels in a coordinated sequence.
-This approach helps the model manage conversational dynamics such as overlapping speech and smooth transitions between turns, adjusting response timing based on the user’s input.
-During inference, Parrot supports streaming input, enabling continuous processing of user audio on one channel while generating responses on the other.
-This streaming capability allows the model to respond to live spoken input in real-time, handling turn-taking, pauses, and interruptions dynamically.
-Unlike cascaded systems that rely on intermediate text conversions, Parrot processes audio directly, reducing latency and allowing immediate responses to spoken input.
-These interaction-focused design choices make Parrot highly responsive, enabling it to manage turn-taking naturally, respond to interruptions, and handle overlapping speech,
+###### VITA
 
-- **Mini-Omni2.** Mini-Omni2 is an open-source multimodal large language model aimed at simulating the multimodal capabilities of GPT-4o in vision, hearing, and text, supporting real-time full-duplex interaction.
-Mini-Omni2 combines visual and audio encoders with a language model to enable simultaneous input and output of images, audio, and text.
-The model incorporates an interrupt mechanism based on instruction design for more flexible user interactions.
-This system uses a delayed parallel generation algorithm, allowing the model to generate text and audio responses simultaneously, greatly improving conversational real-time capabilities and response speed.
-To achieve full-duplex interaction, Mini-Omni2 introduces an interrupt mechanism based on a limited instruction approach, trained on a specially constructed dataset with specific irq (interrupt) and n-irq (non-interrupt) state markers for model optimization.
-For training Mini-Omni2’s interruption functionality, the researchers used noisy speech data synthesized with specific command phrases (such as "Stop Omni") in various voices and tones to simulate scenarios where users might issue interrupt commands.
-The dataset also includes background noises, such as environmental sounds, music, and other dialogues, enhancing the model’s robustness in complex environments.
-During training, Mini-Omni2 controls output flow through irq and n-irq state markers, generating these markers in real-time to determine whether to continue output.
-In this way, the model can immediately halt generation based on user instructions and switch to "listening" mode in real-time dialogue.
-The training data consists of long audio streams from which the model extracts and encodes user commands like "Stop Omni." Researchers inserted interrupt commands at various time points, marking data after the insertion point as irq (interrupt) and data before as n-irq (non-interrupt).
-This labeling method ensures that the model learns to accurately identify interrupt commands in complex audio inputs and respond appropriately.
+**VITA** 是一个开源的多模态大语言模型, 旨在增强多模态交互体验.
+VITA 可以处理多模态输入, 如视频, 图像, 文本, 音频, 并通过涉及两个同时运作的模型的新式双工架构实现流畅的人机交互. 一个用于根据用户查询生成响应; 另一个用于持续监测环境输入.
+当检测到新的用户查询, 生成模型暂停, 监测模型将处理新查询并生成更新的响应.
+这一设置使得 VITA 可以支持音频中断, 允许用户在系统生成期间提出新的问题, 系统立即暂停当前响应来处理新的输入.
 
-- **SyncLLM.** SyncLLM achieves full-duplex dialogue and interruption capabilities through multi-stream interleaving and chunk processing.
-SyncLLM divides the conversation's audio stream into fixed-sized chunks, each corresponding to a specific time interval.
-The model alternates between generating user and system speech segments within each time step (chunk), ensuring real-time system responses while processing user speech input.
-To maintain temporal synchronization with the user, SyncLLM predicts the user’s speech at each time step before generating each system chunk, using it as context to infer the system’s next response.
-This mechanism enables the system to keep pace with the conversation even with network latency.
-The chunk method allows SyncLLM to handle both user and system audio streams simultaneously, supporting complex dialogue features like speech overlap, interruption, and real-time feedback.
-Additionally, by using de-duplicated speech token sequences and periodic synchronization markers, the model efficiently performs chunk-level real-time inference, making conversation more fluid and natural.
+VITA 的感知能力是通过多模态对齐和指令微调实现的, 使得它能够在不同的输入间自动切换.
+  此外, VITA 采用状态 Token 来区分用户输入类型, 例如查询音频, 背景噪声, 文本输入等, 有助于无唤醒交互.
+  VITA 增强的听取模块防止不必要的用户反馈中断用户响应, 提升鲁棒性.
 
-- **OmniFlatten.** Similar to SyncLLM, the OmniFlatten model achieves full-duplex and interruption functionality primarily through multi-stream data processing and progressive training.
-To enable full-duplex dialogue, the model adopts a multi-stream architecture that interleaves the user’s speech stream with the assistant’s speech and text streams into a single sequence for training, simplifying multimodal modeling and enhancing real-time capability.
-The model first aligns the text language model with modality through multitask supervised fine-tuning, enabling it to understand and generate both speech and text, ensuring basic capability for handling speech and text simultaneously.
-Through a progressive training process, OmniFlatten attains full-duplex capability in three stages: initial training for half-duplex dialogue, then removing the user’s text stream to support real-time prediction with multi-stream data, and finally removing the assistant’s text stream to enable pure speech stream generation.
-These steps reduce reliance on text and decrease latency, allowing the system to generate voice responses while receiving user speech input.
-By using a block-by-block generation strategy, OmniFlatten divides the input and output speech sequences into fixed-size blocks, processing each segment in turn.
-This effectively implements streaming processing, ensuring low latency and high responsiveness in full-duplex dialogue, thereby providing a more natural response to user interruptions.
+###### CleanS2S
 
-- **Freeze-Omni.** To support duplex dialogue, Freeze-Omni[^Freeze-Omni] uses a chunk-level state prediction mechanism for natural turn-taking.
-When the user begins speaking, a voice activity detection module identifies the audio input, prompting the model to process the audio chunk by chunk.
-After processing each chunk, the model's classification layer predicts the conversation state to determine the next action.
-There are three possible states: State 0, where the model continues listening for more input, assuming the user hasn’t completed their turn; State 1, where the model interrupts to provide an immediate response if a quick acknowledgment or feedback is needed; and State 2, where the model has completed processing the current user input and is ready to generate and output a response, thus transitioning smoothly into the response phase without further listening.
-This chunk-wise state prediction enables the model to decide effectively when to respond and when to continue listening, enhancing its ability to handle natural conversational cues and support interactive dialogue.
+**CleanS2S.**[^CleanS2S]: 该模型采用结构化流水线实现在口语对话设置下具有响应性和灵活性的交互.
+为了促进无缝轮次切换和中断处理, 模型由数个互连模块组成, 以协调的顺序工作以优化用户体验.
+  - 从用户输入开始, 系统使用语音活动检测 (VAD) 模块来连续检测传入的音频信号.一旦用户开始说话, VAD 就会捕获输入并立刻启动处理, 将音频数据发送到自动语音识别 (ASR) 模块进行处理. 快速检测和响应设置使得系统能够无延迟地响应用户输入.
+  - 当 ASR 将音频转写为文本, 转录结果传给 LLM, 基于用户查询生成相关响应.
+  - 同时, 模型被设计为可感知中断. 在响应生成过程中, 若 VAD 检测到新的用户输入 (表示中断或跟随查询), 系统可以迅速调整其处理流程. 在这种情况下, LLM 暂时停止当前任务, 允许 ASR 转录新的输入, 然后 LLM 使用它来生成更新的响应.
+  中断能力是通过模型的分层处理设计实现的, 允许自适应轮次交换, 使得交互感觉自然而流畅.
+  - 然后 TTS 模块将生成的文本响应转换为音频, 并通过 WebSocket 传输给用户.
+  为了进一步支持中断处理, TTS 将长响应分解为较小的音频片段, 并逐步发送.
+  这种分段方式允许系统在中断发生时立即停止音频输出, 无延迟地切换到新的输入.
+  每个音频分段准备好后, 仅在短暂地 VAD 检查后发送, 确保用户随时中断并处理新的输入.
+  - 这种互连处理链: VAD 检测输入 + ASR 转写 + LLM 生成响应 + TTS 输出分段音频, 构成了一个双工交互框架, 能够平衡响应生成和用户驱动的中断. 通过无缝地协调这些组件, 模型提供了流畅实时的对话体验, 能够根据用户交互动态调整.
 
-#### Discussions about streaming and interaction
+##### 端到端系统
 
-Significant progress has been made in dialogues models, particularly in real-time interaction and semantic understanding, with notable achievements in streaming processing and full-duplex interaction.
-Current systems exhibit strong technical capabilities in reducing response latency, enhancing interruption handling, and improving the naturalness of conversation.
-However, existing spoken dialogues models still lack a unified system that can handle all forms of interaction seamlessly.
-Future research could explore new frameworks to better manage both user interruptions and the system’s ability to interrupt users, making interactions more natural.
-Additionally, standardized benchmarks for evaluating interaction capabilities remain underdeveloped.
-A unified evaluation benchmark would provide a consistent method for assessing and comparing the performance of different models, thereby advancing the development of more intelligent and responsive interaction systems.
+与级联式系统不同, 端到端口语对话模型不需要显式建模对话轮次, 它们直接从训练数据学习交互建模.
+接下来, 我们介绍数个端到端系统在交互方面的代表性工作.
+
+###### dGSLM
+
+**dGSLM**: 在端到端系统中, dGSLM 模型的出现是全双工技术发展的一个重要里程碑. 在 dGSLM 框架中, 全双工技术被有效实现. 模型展示了如何通过生成式口语对话建模而无需文本来直接从原始音频数据捕获对话中的复杂互动.
+- dGSLM 的核心创新是双塔 Transformer 架构, 称为**对话 Transformer 语言模型 (DLM)**, 使用交叉注意力机制来使得系统同时处理两个并行的音频通道.
+通过这一架构, 模型不仅为每个通道独立生成语音还使用交叉注意力来共享通道间的信息, 有效地建模静默和交互事件.
+- 它使用了 HuBERT 编码器和 HiFi-GAN 解码器, 和双塔 DLM 组合, 然后在两千小时的双通道电话对话音频 (Fisher 数据集) 上训练, 对话中的每个说话人被分配到单独的音轨上.
+  - dGSLM 将通道上的音频使用 HuBERT 转换为离散 Token, 然后 DLM 自回归地预测下一个音频 Token 和时长.
+  - 最后, HiFi-GAN [^HiFi-GAN] 解码器重构了两个通道上的音频.
+- 这种方法与传统的依赖文本的口语对话模型有很大不同, 特别强调了建模对话轮次和反向通道能力.
+这种能力给 dGSLM 在双工声音交互方面带来了显著优势, 能够更好地模拟人类对话的自然动态.
+通过其双工模型设计, dGSLM 代表向交互能力迈出了重要的一步, 为进一步发展奠定了基础.
+
+###### Moshi
+
+作为新式全双工架构, Moshi 整合了丰富的设计概念.
+和 dGSLM 不同, Moshi 并未放弃语言模型在文本对话方面的能力.
+Moshi 的架构基于 Helium 语言模型和 Mimi 神经音频编解码器, 两者都从零开始训练.
+Helium 作为预训练的大型文本语言模型, 提供了强力的推理能力, 而 Mimi 处理音频信号的编码和解码.
+为了实现实时交互, Moshi 被设计为多流架构, 同时处理用户和 Moshi 音频流, 而不显式建模说话人轮次.
+Moshi 在 Moshi 音频流上还引入了 "Inner Monologue (内心独白)" 方法, 一种在训练和推理时联合建模文本和音频 Token 的过程.
+该方法允许模型充分利用文本知识, 同时保持语音到语音的系统特性, 显著增强生成质量.
+Mimi 是一个神经音频编解码器, 通过残差向量量化和知识蒸馏融合了语义和声学信息, 有效地捕获高质量的用户输入音频和 Moshi 的输出声音.
+为了联合建模 Moshi 和用户音频流以及 Moshi 文本 Token, 采用了具备流式推理能力的 Depth Transformer.
+Mimi 编码器和解码器将卷积和 Transformer 层组合, 采用因果卷积, 实现流式操作.
+Moshi 在无监督音频数据上预训练以处理语音场景, 然后在 Fisher 数据集上微调以处理重叠语音和中断.
+最后, 系统进一步在定制的指令微调数据集上优化, 确保在各种交互场景下保持鲁棒性能.
+实验结果表明 Moshi 在语音建模和口语 QA 任务表现卓越, 特别是在延迟上, 理论延迟为 160 毫秒, 实际延迟为 200 毫秒, 显著低于自然对话的通常延迟 230 毫秒, 增强了实时交互和对话流动.
+
+###### Parrot
+
+**Parrot**[^SD-GPT] 模型整合了特别设计的多个特性以增强口语对话中的交互性.
+它使用了双通道音频设置, 每个通道表示不同的说话人.
+这种配置允许 Parrot 单独管理对话双方, 实现实时轮次交换.
+通过区分单独通道上用户输入和系统响应, 模型可以并行地听取和响应, 创造更自然的对话流.
+为了有效地处理同时的发言人输入, Parrot 采用了 "下一个 Token 对预测" 机制, 允许它在协调序列中预测两个通道的 Token.
+这种方法帮助模型管理对话动态, 如重叠语音和平滑的轮次切换, 基于用户输入调整响应时间.
+在推理时, Parrot 支持流式输入, 确保用户音频在一个通道上的连续处理, 而另一个通道生成响应.
+这种流式能力使得模型能够实时响应实况口语输入, 动态地处理轮次交换, 暂停和中断.
+和级联系统依赖中间文本对话不同, Parrot 直接处理音频, 减少延迟并能对口语输入立即响应.
+这些着重于交互的设计选择使得 Parrot 具有高度响应性, 能够自然地管理轮次交换, 应对中断, 并处理重叠语音.
+
+###### Mini-Omni2
+
+Mini-Omni2 是一个开源的多模态大语言模型, 旨在模拟 GPT-4o 在视觉听觉和文本上的多模态能力并支持实时全双工交互.
+Mini-Omni2 将视觉和音频编码器和语言模型组合并确保图像音频文本的同时输入和输出.
+模型整合了基于指令设计的中断机制, 以便更灵活的用户交互.
+该系统使用延迟并行生成算法, 允许模型同时生成文本和音频响应, 极大提升了对话实时能力和响应速度.
+为了实现全双工交互, Mini-Omni2 引入基于有限指令方法的中断机制, 在特别构建的数据集上训练, 该数据集包含特定的 irq (中断) 和 n-irq (非中断) 状态标记, 以优化模型.
+为了训练 Mini-Omni2 的中断功能, 研究人员使用了合成的带有特定命令短语 (如 "停止 Omni") 的噪声语音数据, 在各种声音和音调的场景中模拟用户可能发出中断命令的场景.
+数据集还包括背景噪声, 如环境音, 音乐和其他对话, 增强模型在复杂环境中的鲁棒性.
+在训练时, Mini-Omni2 通过 irq 和 n-irq 状态标记控制输出流, 以实时生成这些标记以决定是否继续输出.
+通过这种方式, 模型可以在实时对话中基于用户指令立即中断生成并切换到 "监听" 模式.
+训练数据由长音频流组成, 模型从中提取并编码用户命令, 如 "停止 Omni".
+研究人员在不同时间点插入中断命令, 将插入点后数据标记为 irq (中断), 插入点前数据标记为 n-irq (非中断).
+这种标记方法确保模型学习在复杂音频输入中准确识别中断命令并相应地作出响应.
+
+###### SyncLLM
+
+SyncLLM 通过多流交错和分块处理来实现全双工对话和中断能力.
+SyncLLM 将对话音频流分割成固定大小的块, 每块对应特定的时间间隔.
+模型在每个时间步 (块) 内交替生成用户和系统语音段, 确保实时系统响应的同时处理用户语音输入.
+为了保持和用户的时序同步, SyncLLM 在每个时间步时在生成每个系统块之前预测用户语音, 并作为内容用于推理系统的下一个响应.
+这种机制使得系统能够在网络延迟下保持对话的节奏.
+分块方法允许 SyncLLM 同时处理用户和系统音频流, 支持复杂对话特性如语音重叠, 中断, 实时反馈.
+此外, 通过使用去重的语音 Token 序列和周期同步标记, 模型有效地执行块级实时推理, 使对话更加流畅自然.
+
+###### OmniFlatten
+
+类似于 SyncLLM, OmniFlatten 模型通过多流数据处理和渐进训练实现全双工和中断功能.
+为了实现全双工对话, 模型采用多流架构, 将用户语音流, 助手语音和文本流交错到单个序列中用于训练, 简化多模态建模并增强实时能力.
+模型首先通过多任务监督微调来对齐文本语言模型和模态, 使其能够理解和生成语音和文本, 确保基础能力能够同时处理语音和文本.
+通过渐进训练过程, OmniFlatten 在三个阶段实现全双工能力:
+- 初始训练实现半双工对话,
+- 移除用户文本流, 用多流数据支持实时预测,
+- 移除助手文本流, 实现纯语音流生成.
+
+这些步骤减少了对文本的依赖并降低延迟, 允许系统生成语音响应的同时接收用户语音输入.
+通过使用逐块生成策略, OmniFlatten 将输入和输出语音序列划分为固定大小的块, 逐个处理每个片段.
+这有效地实现了流式处理, 确保全双工对话中的低延迟和高响应, 从而为用户中断提供更自然的响应.
+
+###### Freeze-Omni
+
+为了支持双工对话, Freeze-Omni[^Freeze-Omni] 使用块级状态预测机制来实现自然轮次切换.
+当用户开始说话时, 语音活动检测模块识别音频输入, 提示模型按块处理音频.
+在处理每个块后, 模型的分类层预测对话状态, 以确定下一步动作.
+在三个可能的状态:
+- 状态 0: 模型继续监听更多输入, 假设用户还未完成他们的轮次;
+- 状态 1: 模型中断以提供即时响应, 如果需要快速确认或反馈;
+- 状态 2: 模型完成处理当前用户输入, 准备生成并输出响应, 因此无需再继续监听, 转变到响应阶段.
+
+这种块级状态预测使得模型能有效地决定何时响应, 何时继续监听, 增强其处理自然对话线索和支持交互式对话的能力.
+
+### 5.3·相关讨论
+
+对话模型取得了显著的进步, 尤其是在实时交互和语义理解, 在流式处理和全双工交互方面取得了重要成果.
+现有的系统在减少响应延迟, 增强中断处理和提升对话自然度方面表现出强大的技术能力.
+然而, 现有的口语对话模型仍然缺乏统一系统以无缝处理所有形式的交互.
+未来研究可以探索新的框架来更好地管理用户中断和系统终端用户的能力, 使交互更自然.
+此外, 评估交互能力的标准化基准仍未开发.
+统一的评估基准可以为不同模型提供一致的方法以评估和比较性能, 从而促进更智能和响应的交互系统的发展.
 
 ## Training Resources and Evaluation
 
@@ -1981,18 +2006,18 @@ SimVQ [^259] &
 [^LSLM]: ma2024language
 [^Raux2009Finite]: A Finite-State Turn-Taking Model for Spoken Dialog Systems.
 [^Sacks1974Simplest]: A Simplest Systematics for the Organization of Turn-Taking for Conversation.
-[^Duncan1972Some]: duncan1972some
-[^Duncan1974Signalling]: duncan1974signalling
-[^Hara2019Turn]: hara2019turn
-[^Lala2017Attentive]: lala2017attentive
-[^Lala2019Smooth]: lala2019smooth
-[^TurnGPT]: ekstedt2020turngpt
-[^Khouzaimi2016Reinforcement]: khouzaimi2016reinforcement
-[^Hara2018Prediction]: hara2018prediction
-[^143]: lin2022duplex
-[^144]: jin2021duplex
-[^145]: CleanS2S
-[^146]: meng2024sd
+[^Duncan1972Some]: Some Signals and Rules for Taking Speaking Turns in Conversations.
+[^Duncan1974Signalling]: On Signalling that It's Your Turn to Speak.
+[^Hara2019Turn]: Turn-Taking Prediction Based on Detection of Transition Relevance Place.
+[^Lala2017Attentive]: Attentive Listening System with Backchanneling Response Generation and Flexible Turn-Taking.
+[^Lala2019Smooth]: Smooth Turn-Taking by a Robot Using an Online Continuous Model to Generate Turn-Taking Cues
+[^TurnGPT]: TurnGPT
+[^Khouzaimi2016Reinforcement]: Reinforcement Learning for Turn-Taking Management in Incremental Spoken Dialogue Systems.
+[^Hara2018Prediction]: Prediction of Turn-Taking Using Multitask Learning with Prediction of Backchannels and Fillers.
+[^Lin2022Duplex]: Duplex Conversation: Towards Human-Like Interaction in Spoken Dialogue Systems.
+[^Jin2021Duplex]: Duplex_Conversation_in_Outbound_Agent_System.
+[^CleanS2S]: CleanS2S
+[^SD-GPT]: meng2024sd
 [^147]: anil2023palm
 [^148]: bu2017aishell
 [^149]: du2018aishell
