--- a/Surveys/S20241115.md
+++ b/Surveys/S20241115.md
@@ -1554,23 +1554,31 @@ Table.04: Music and Non-Speech Sound Datasets
 在评估口语对话模型的文本智能时, 不管输出的形式如何, 我们只关心生成的文本或从音频转写的文本.
 通常采用两类指标和基准来评估文本智能: MT-Metrics 和 Acc-Metrics.
 
-- **ACC-Metrics.** A common approach to evaluating text intelligence is to use benchmarks typically[^CommonsenseQA], [^HELM], [^HellaSwaq], [^ARC], [^WinoGrande], **HumanEval**[^Codex], [^AGIEval], [^NaturalInstructions], [^Super-NaturalInstructions], [^MMDialog] employed for large language models, such as the classic MMLU[^MMLU] and GSM-8K [^GSM8K].
-These benchmarks often include complex multiple-choice questions, which assess the model's reasoning abilities through Acc-Metrics.
-Acc-Metrics refers to metrics that measure recognition accuracy, such as accuracy, F-score, and Mean Average Precision (mAP).
-It is noteworthy that these benchmarks often evaluate the text-based intelligence of spoken dialogue models from various perspectives.
-For example, MMLU [^MMLU] and GSM-8K [^GSM8K] are more focused on LLM's core knowledge, Flan [^FLAN2022], [^FLAN2021] and Self-instruct [^Self-Instruct] are more focused on LLM's instruction following capability, CoQA [^CoQA] and OpenAssistant [^OpenAssistant] are more focused on LLM's conversational capability.
-These benchmarks often contain questions and corresponding answers.
-Most of these questions are close-ended questions with short answers, so that they can have good generalization ability, any model that can generate text answers can be evaluated with these benchmarks and accuracy and F-Score can be easily adopted as the evaluation metrics.
+###### 准确率类指标
 
-- **MT-Metrics.**  With the development of the LLMs, LLMs can follow instructions to accomplish many complex problems, so the scope of the evaluation was further expanded to include open-ended questions.
-These open-ended questions often lack standard answers, therefore it's difficult to measure them by common ACC-Metrics.
-A common approach is to measure the grammatical similarity between generated and reference utterances using the metrics used to measure grammatical similarity in mechanical translation (e.g.
-BLEU [^BLEU], METEOR [^METEOR], ROUGE [^ROUGE]).
-We collectively refer to these evaluation metrics as **MT-Metrics**.
-However, these metrics have certain limitations since one meaning has many different ways to convey.
-So there are some metrics like BertScore [^BERTScore] focus on evaluating the semantic similarity between two sentences.
-And there are also been some methods utilizing LLM to judge the effectiveness of the responses which focusing on human preference [^LLM-as-a-judge], [^G-Eval].
-The results of these large model-based especially GPT4o-based ratings of evaluation metrics demonstrated a high degree of correlation with human.
+评估文本智能的一种常见方法是使用通常用于大语言模型的基准测试 (CommonsenseQA[^CommonsenseQA], HELM[^HELM], HellaSwag[^HellaSwaq], ARC[^ARC], WinoGrande[^WinoGrande], HumanEval[^Codex], AGIEval[^AGIEval], NaturalInstructions[^NaturalInstructions], Super-NaturalInstructions[^Super-NaturalInstructions], MMDialog[^MMDialog], MMLU[^MMLU], GSM-8K[^GSM8K]).
+这些基准通常包括复杂的多项选择, 通过准确率类指标评估模型的推理能力.
+
+准确率类指标是指用于衡量识别准确性的指标, 例如准确率 (Accuracy), F 分数 (F-Score), 全类平均精度 (Mean Average Precision, mAP).
+值得注意的是, 这些基准测试往往从多个角度评估口语对话模型的文本智能.
+例如:
+- MMLU[^MMLU] 和 GSM-8K[^GSM8K] 更侧重于大语言模型的核心知识.
+- FLAN[^FLAN2021] [^FLAN2022] 和 Self-instruct[^Self-Instruct] 更侧重于语言模型的指令跟随能力.
+- CoQA [^CoQA] 和 OpenAssistant [^OpenAssistant] 更侧重于语言模型的对话能力.
+
+这些基准测试通常包括问题和相应的答案.
+大多数问题是封闭式问题, 答案较短, 因此可以具有良好的泛化能力, 任何可以生成文本答案的模型都可以用这些基准测试, 并采用准确率和 F 分数作为评估指标.
+
+###### 机器翻译类指标
+
+随着大语言模型的发展, 它们可以遵循指令完成许多复杂任务, 因此评估范围进一步扩展到开放性问题.
+这些开放性问题往往缺乏标准答案, 因此很难通过常见的准确率类指标进行衡量.
+一种常见的方法是使用衡量生成句子和参考句子之间的语法相似度的指标 (BLEU [^BLEU], METEOR [^METEOR], ROUGE [^ROUGE]).
+我们将这些评估指标统称为 **MT-Metrics**.
+然而, 这些指标存在一些局限性, 因为同一个意思可能有多种不同的表达方式.
+因此, 有一些指标如 BERTScore [^BERTScore] 专注于衡量两个句子的语义相似度.
+还有一些方法利用语言模型来评估响应的有效性, 这些方法专注于衡量人类的偏好 [^LLM-as-a-judge], [^G-Eval].
+基于大模型特别是 GPT-4o 的评分的评估指标结果表明, 与人类偏好高度相关.
 
 ##### 语音质量
 
