--- a/Surveys/S20241216.md
+++ b/Surveys/S20241216.md
@@ -12,7 +12,7 @@
   - [Github](https://github.com/LMM101/Awesome-Multimodal-Next-Token-Prediction)
   - [Demo]()
 - 文件:
-  - [ArXiv](2412.18619v2__Next_Token_Prediction_Towards_Multimodal_Intelligence__A_Comprehensive_Survey.pdf)
+  - [ArXiv](PDF/2024.12.30__2412.18619v2__Next_Token_Prediction_Towards_Multimodal_Intelligence__A_Comprehensive_Survey.pdf)
   - [Publication] #TODO
 
 </details>
