--- a/Surveys/S20240220.md
+++ b/Surveys/S20240220.md
@@ -18,7 +18,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv](PDF/2024.02.20__2402.13236v1__Survey__Towards_Audio_Language_Modeling__An_Overview.pdf)
+  - [ArXiv](PDF/S20240220__Towards_Audio_Language_Modeling__An_Overview[2402.13236v1].pdf)
   - [Publication] #TODO
 
 </details>
@@ -79,7 +79,7 @@ Numerous high performance neural audio codec models and audio LMs have been deve
 
 <a id="Fig.01"></a>
 
-![Timeline of Current Neural Codec Models and Codec-Based Language Models](Images/2024.02.20_Fig.01.png)
+![Timeline of Current Neural Codec Models and Codec-Based Language Models](Images/S20240220_Fig.01.png)
 
 Fig.01: Timeline of Current Neural Codec Models and Codec-Based Language Models
 
@@ -139,7 +139,7 @@ The six codec models have distinct training details, resulting in a collection o
 
 <a id="Tab.01"></a>
 
-![Images/2024.02.20_Tab.01.png](Images/2024.02.20_Tab.01.png)
+![Images/2024.02.20_Tab.01.png](Images/S20240220_Tab.01.png)
 
 Tab.01: Codec Information Comparison.
 `A-F` represents different neural codec models, where
@@ -273,7 +273,7 @@ Please refer to [Tab.01](#Tab.01) for the corresponding model full name.
 <tr><td colspan="2">
 <a id="Tab.02"></a>
 
-![Images/2024.02.20_Tab.02.png](Images/2024.02.20_Tab.02.png)
+![Images/2024.02.20_Tab.02.png](Images/S20240220_Tab.02.png)
 
 Tab.02: Comparison between codec implementation strategy.
 - `SEM` represents codec including Semantic Tokens.
@@ -388,7 +388,7 @@ The entire pipeline embodies an audio-to-audio modeling approach.
 
 <a id='Fig.02'></a>
 
-![Images/2024.02.20_Fig.02.png](Images/2024.02.20_Fig.02.png)
+![Images/2024.02.20_Fig.02.png](Images/S20240220_Fig.02.png)
 
 Fig.02: Codec-Based Language Modeling.
 
@@ -591,7 +591,7 @@ Finally, we show the codec models adopted by different LMs.
 </td></tr>
 <tr><td colspan="2">
 
-![Images/2024.02.20_Tab.03.png](Images/2024.02.20_Tab.03.png)
+![Images/2024.02.20_Tab.03.png](Images/S20240220_Tab.03.png)
 
 
 <a id="Tab.03"></a>
