--- a/Surveys/S20230430.md
+++ b/Surveys/S20230430.md
@@ -16,8 +16,8 @@
   - [Github]
   - [Demo]
 - 文件:
-  - [ArXiv](2305.00359v3__Survey__A_Review_of_Deep_Learning_Techniques_for_Speech_Processing.pdf)
-  - [Publication](2305.00359p0__Survey__InfFus2023.pdf)
+  - [ArXiv](PDF/S20230430__A_Review_of_Deep_Learning_Techniques_for_Speech_Processing[2305.00359v3].pdf)
+  - [Publication](PDF/2023.05.12__2305.00359p0__Survey__A_Review_of_Deep_Learning_Techniques_for_Speech_Processing_InfFus2023.pdf)
 
 </details>
 
